--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,12 @@
             <version>${org.elasticsearch.client.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
